# canadian-ai-jobs

./: .env.example  .gitignore  build_site_data.py  classify_sector.py  claude.md  crosswalk.py  download_noc.py  extract_themes.py  make_csv.py  parse.py  pyproject.toml  score.py
site/: card1-hero.html  card2-wave1.html  card3-wave2.html  card4-wave3.html  card5-cumulative.html  card6-top10.html  data.json  displacement.html  index.html  infographic.html  insights.css  insights.html  style.css
